# Einsum-Simulator

./: .gitignore  CMakeLists.txt  Dockerfile.dev  README.md
python/: __init__.py  cudaq_einsum.py  einsum_circuit.py  einsum_sidecar.py
scripts/: build-and-test.sh  docker-build.sh  docker-setup.sh  docker-shell.sh  docker-test.sh
src/: EinsumSimulator.cpp  EinsumSimulator.h
targets/: einsum.yml
tests/: test_einsum.py  test_sidecar.py
